update result section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             </div>   
         </form>
         <div id="tip-result" style="display: none;">
+            <h2>Tip Calculation Result</h2>
+            <p>Bill Amount: $<span id="bill-amount-display"></span></p>
             <p>Tip Amount: $<span id="tip-amount"></span></p>
-            <p>Total Amount: $<span id="total-amount"></span></p>
+            <p>Total Amount to Be Paid: $<span id="total-amount"></span></p>
         </div>
     </div>
     <script src="js/script.js"></script>
